--- a/01-what is computer.ipynb
+++ b/01-what is computer.ipynb
@@ -323,13 +323,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
      ]
     }
    ],
    "source": [
     "#number of people in the room\n",
-    "num_pessoas=20\n",
+    "num_pessoas=10\n",
     "\n",
     "#array\n",
     "pessoas = []\n",
@@ -352,9 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "import array\n",
     "import random\n",
@@ -380,9 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The WINNER is: 7\n"
+     ]
+    }
+   ],
    "source": [
     "winner = random.randint(1,num_pessoas)\n",
     "\n",
@@ -412,9 +428,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>DateType</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>ResidenceCity</th>\n",
+       "      <th>ResidenceCounty</th>\n",
+       "      <th>ResidenceState</th>\n",
+       "      <th>DeathCity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Tramad</th>\n",
+       "      <th>Morphine_NotHeroin</th>\n",
+       "      <th>Hydromorphone</th>\n",
+       "      <th>Other</th>\n",
+       "      <th>OpiateNOS</th>\n",
+       "      <th>AnyOpioid</th>\n",
+       "      <th>MannerofDeath</th>\n",
+       "      <th>DeathCityGeo</th>\n",
+       "      <th>ResidenceCityGeo</th>\n",
+       "      <th>InjuryCityGeo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14-0273</td>\n",
+       "      <td>06/28/2014 12:00:00 AM</td>\n",
+       "      <td>DateReported</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13-0102</td>\n",
+       "      <td>03/21/2013 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>NORWALK</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NORWALK</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>Norwalk, CT\\n(41.11805, -73.412906)</td>\n",
+       "      <td>NORWALK, CT\\n(41.11805, -73.412906)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16-0165</td>\n",
+       "      <td>03/13/2016 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>White</td>\n",
+       "      <td>SANDY HOOK</td>\n",
+       "      <td>FAIRFIELD</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>DANBURY</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>Danbury, CT\\n(41.393666, -73.451539)</td>\n",
+       "      <td>SANDY HOOK, CT\\n(41.419998, -73.282501)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16-0208</td>\n",
+       "      <td>03/31/2016 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>RYE</td>\n",
+       "      <td>WESTCHESTER</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>GREENWICH</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>Greenwich, CT\\n(41.026526, -73.628549)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13-0052</td>\n",
+       "      <td>02/13/2013 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Asian, Other</td>\n",
+       "      <td>FLUSHING</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GREENWICH</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>Greenwich, CT\\n(41.026526, -73.628549)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>14-0277</td>\n",
+       "      <td>06/29/2014 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>BRISTOL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BRISTOL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>BRISTOL, CT\\n(41.673037, -72.945791)</td>\n",
+       "      <td>BRISTOL, CT\\n(41.673037, -72.945791)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>12-0205</td>\n",
+       "      <td>08/12/2012 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>White</td>\n",
+       "      <td>WEST HARTFORD</td>\n",
+       "      <td>HARTFORD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WEST HARTFORD</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>WEST HARTFORD, CT\\n(41.762008, -72.741807)</td>\n",
+       "      <td>WEST HARTFORD, CT\\n(41.762008, -72.741807)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13-0404</td>\n",
+       "      <td>11/10/2013 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>White</td>\n",
+       "      <td>HAMDEN</td>\n",
+       "      <td>NEW HAVEN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NEW HAVEN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>New Haven, CT\\n(41.308252, -72.924161)</td>\n",
+       "      <td>HAMDEN, CT\\n(41.382918, -72.907743)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12-0107</td>\n",
+       "      <td>04/25/2012 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>EAST HARTFORD</td>\n",
+       "      <td>HARTFORD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EAST HARTFORD</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>EAST HARTFORD, CT\\n(41.769319, -72.643785)</td>\n",
+       "      <td>EAST HARTFORD, CT\\n(41.769319, -72.643785)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>13-0161</td>\n",
+       "      <td>05/15/2013 12:00:00 AM</td>\n",
+       "      <td>DateofDeath</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>MONTVILLE</td>\n",
+       "      <td>NEW LONDON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MONTVILLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>MONTVILLE, CT\\n(41.45303, -72.136336)</td>\n",
+       "      <td>MONTVILLE, CT\\n(41.45303, -72.136336)</td>\n",
+       "      <td>CT\\n(41.575155, -72.738288)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID                    Date      DateType   Age     Sex          Race  \\\n",
+       "0  14-0273  06/28/2014 12:00:00 AM  DateReported   NaN     NaN           NaN   \n",
+       "1  13-0102  03/21/2013 12:00:00 AM   DateofDeath  48.0    Male         Black   \n",
+       "2  16-0165  03/13/2016 12:00:00 AM   DateofDeath  30.0  Female         White   \n",
+       "3  16-0208  03/31/2016 12:00:00 AM   DateofDeath  23.0    Male         White   \n",
+       "4  13-0052  02/13/2013 12:00:00 AM   DateofDeath  22.0    Male  Asian, Other   \n",
+       "5  14-0277  06/29/2014 12:00:00 AM   DateofDeath  23.0    Male         White   \n",
+       "6  12-0205  08/12/2012 12:00:00 AM   DateofDeath  21.0  Female         White   \n",
+       "7  13-0404  11/10/2013 12:00:00 AM   DateofDeath  40.0  Female         White   \n",
+       "8  12-0107  04/25/2012 12:00:00 AM   DateofDeath  40.0    Male         White   \n",
+       "9  13-0161  05/15/2013 12:00:00 AM   DateofDeath  50.0    Male         White   \n",
+       "\n",
+       "   ResidenceCity ResidenceCounty ResidenceState      DeathCity  ... Tramad  \\\n",
+       "0            NaN             NaN            NaN            NaN  ...    NaN   \n",
+       "1        NORWALK             NaN            NaN        NORWALK  ...    NaN   \n",
+       "2     SANDY HOOK       FAIRFIELD             CT        DANBURY  ...    NaN   \n",
+       "3            RYE     WESTCHESTER             NY      GREENWICH  ...    NaN   \n",
+       "4       FLUSHING          QUEENS            NaN      GREENWICH  ...    NaN   \n",
+       "5        BRISTOL             NaN            NaN        BRISTOL  ...    NaN   \n",
+       "6  WEST HARTFORD        HARTFORD            NaN  WEST HARTFORD  ...    NaN   \n",
+       "7         HAMDEN       NEW HAVEN            NaN      NEW HAVEN  ...    NaN   \n",
+       "8  EAST HARTFORD        HARTFORD            NaN  EAST HARTFORD  ...    NaN   \n",
+       "9      MONTVILLE      NEW LONDON            NaN      MONTVILLE  ...    NaN   \n",
+       "\n",
+       "  Morphine_NotHeroin Hydromorphone Other OpiateNOS AnyOpioid MannerofDeath  \\\n",
+       "0                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "1                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "2                NaN           NaN   NaN       NaN         Y      Accident   \n",
+       "3                NaN           NaN   NaN       NaN         Y      Accident   \n",
+       "4                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "5                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "6                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "7                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "8                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "9                NaN           NaN   NaN       NaN       NaN      Accident   \n",
+       "\n",
+       "                                 DeathCityGeo  \\\n",
+       "0                 CT\\n(41.575155, -72.738288)   \n",
+       "1         Norwalk, CT\\n(41.11805, -73.412906)   \n",
+       "2        Danbury, CT\\n(41.393666, -73.451539)   \n",
+       "3      Greenwich, CT\\n(41.026526, -73.628549)   \n",
+       "4      Greenwich, CT\\n(41.026526, -73.628549)   \n",
+       "5        BRISTOL, CT\\n(41.673037, -72.945791)   \n",
+       "6  WEST HARTFORD, CT\\n(41.762008, -72.741807)   \n",
+       "7      New Haven, CT\\n(41.308252, -72.924161)   \n",
+       "8  EAST HARTFORD, CT\\n(41.769319, -72.643785)   \n",
+       "9       MONTVILLE, CT\\n(41.45303, -72.136336)   \n",
+       "\n",
+       "                             ResidenceCityGeo                InjuryCityGeo  \n",
+       "0                 CT\\n(41.575155, -72.738288)  CT\\n(41.575155, -72.738288)  \n",
+       "1         NORWALK, CT\\n(41.11805, -73.412906)  CT\\n(41.575155, -72.738288)  \n",
+       "2     SANDY HOOK, CT\\n(41.419998, -73.282501)                          NaN  \n",
+       "3                                         NaN                          NaN  \n",
+       "4                                         NaN  CT\\n(41.575155, -72.738288)  \n",
+       "5        BRISTOL, CT\\n(41.673037, -72.945791)  CT\\n(41.575155, -72.738288)  \n",
+       "6  WEST HARTFORD, CT\\n(41.762008, -72.741807)  CT\\n(41.575155, -72.738288)  \n",
+       "7         HAMDEN, CT\\n(41.382918, -72.907743)  CT\\n(41.575155, -72.738288)  \n",
+       "8  EAST HARTFORD, CT\\n(41.769319, -72.643785)  CT\\n(41.575155, -72.738288)  \n",
+       "9       MONTVILLE, CT\\n(41.45303, -72.136336)  CT\\n(41.575155, -72.738288)  \n",
+       "\n",
+       "[10 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the Pandas libraries with alias 'pd' \n",
     "import pandas as pd \n",
@@ -435,15 +810,15 @@
     "<br>\n",
     "Let's try some queries...\n",
     "\n",
-    "> #deaths opioid\n",
-    "> #deaths male\n",
-    "> #deaths female\n",
-    "> #deaths hospital\n",
-    "> #deaths residence\n",
-    "> #deaths Bristol\n",
-    "> #deaths male and Bristol\n",
-    "> #deaths male and Bristol and opioid\n",
-    "> #deaths male and Bristol and opioid and <34 years old\n",
+    "> #deaths opioid<br>\n",
+    "> #deaths male<br>\n",
+    "> #deaths female<br>\n",
+    "> #deaths hospital<br>\n",
+    "> #deaths residence<br>\n",
+    "> #deaths Bristol<br>\n",
+    "> #deaths male and Bristol<br>\n",
+    "> #deaths male and Bristol and opioid<br>\n",
+    "> #deaths male and Bristol and opioid and <34 years old<br>\n",
     "\n",
     "\n",
     "\n"
@@ -817,9 +1192,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number :  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total guesses were 29984\n",
+      "2.998400000001903 is close to the square root of 9\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input('Enter a number : '))\n",
     "# The guess answer\n",
@@ -871,9 +1262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number :  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total guesses were 10\n",
+      "3.00146484375 is close to the square root of 9\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input('Enter a number : '))\n",
     "\n",
@@ -1564,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
