--- a/01-what is computer.ipynb
+++ b/01-what is computer.ipynb
@@ -2691,6 +2691,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**A lei americana diz que é proibido vender armas a uma nação hostil. Cuba possui alguns mísseis, e todos eles foram vendidos pelo Capitão West, que é americano**\n",
+    "\n",
+    "> West é criminoso ou não?\n",
+    "\n",
+    "<img  src=\"img/logic_cap_West.png\"  width=400  />\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>\n",
     "<br>\n",
     "\n",
