--- a/04-digital transformation.ipynb
+++ b/04-digital transformation.ipynb
@@ -244,10 +244,16 @@
     "\n",
     "<!-- <img align=right src=\"img/digitaltra.jpg\" width=400/> -->\n",
     "\n",
-    "> product | process | operation\n",
+    "> product | process | operation | customer experience\n",
     "\n",
     "<br>\n",
-    "source for competitive advantage.\n"
+    "- track competitive advantage <br>\n",
+    "- rethink old operating models <br>\n",
+    "- experiment more <br>\n",
+    "- become more agile<br>\n",
+    "- respond to customers <br>\n",
+    "- respond to rivals\n",
+    "\n"
    ]
   },
   {
@@ -255,10 +261,7 @@
    "metadata": {},
    "source": [
     "SP500 average age of a company joining 1957-75, 2003-25, 2013-10\n",
-    "\n",
-    "LK - to rethink old operating models, to experiment more, to become more agile in your ability to respond to customers and rivals\n",
-    "\n",
-    "(atualizacao)"
+    "\n"
    ]
   },
   {
