--- a/05-artificial intelligence.ipynb
+++ b/05-artificial intelligence.ipynb
@@ -74,7 +74,11 @@
     "<br> </br>\n",
     "### Table of Contents\n",
     "\n",
-    "- [Wsssss?](#whatisacomputer)\n",
+    "- [What is Intelligence?](#whatisintelligence)\n",
+    "- [What is Artificial Intelligence?](#whydigitaltransformation)\n",
+    "- [xxxxxxx](#wheredigitaltransformation)\n",
+    "- [xxxxxxx](#wheredigitaltransformation)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -89,25 +93,106 @@
     }
    },
    "source": [
-    "<a id='whatisacomput'></a>\n",
-    "## Wxxxxxx\n",
+    "<a id='whatisintelligence'></a>\n",
+    "## What is Intelligence?\n",
     "\n",
-    "<img align=right src=\"img/xx.jpg\" width=300/>\n",
     "\n",
-    ">xxxx\n",
+    "<img align=right src=\"img/boring.gif\" width=300/>\n",
+    "<!-- James/Jim Belushi-->\n",
+    "\n",
+    "Sick of being told your business should be more like `Apple`, `Amazon`, `Uber`, or `Airbnb`?\n",
+    "\n",
+    "Tired of the word: Digital Transformation?\n",
+    "\n",
+    "\n",
+    "> Inovation <br>\n",
+    "> Applied Innovation<br>\n",
+    "> **Digital Journey**\n",
     "        \n",
     "<br>  \n",
     "\n",
-    "xxxxx:\n",
     "\n",
-    "* xxx*\n",
-    "* sxxx)**\n",
-    "        \n",
-    "<br>\n",
-    "<br>\n",
+    "Let's try to re-build this idea:\n",
     "\n",
-    "###### * xxxx\n"
+    "* **WHAT** is Digital Transformation?\n",
+    "* **WHY** is it Important?\n",
+    "* **WHERE** to apply it?\n",
+    "* **HOW** to do it?\n",
+    "* **EXAMPLES**\n",
+    "        \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a id='whatisintelligence'></a>\n",
+    "## What is Artificial Intelligence?\n",
+    "\n",
+    "\n",
+    "<img align=right src=\"img/boring.gif\" width=300/>\n",
+    "<!-- James/Jim Belushi-->\n",
+    "\n",
+    "Sick of being told your business should be more like `Apple`, `Amazon`, `Uber`, or `Airbnb`?\n",
+    "\n",
+    "Tired of the word: Digital Transformation?\n",
+    "\n",
+    "\n",
+    "> Inovation <br>\n",
+    "> Applied Innovation<br>\n",
+    "> **Digital Journey**\n",
+    "        \n",
+    "<br>  \n",
+    "\n",
+    "\n",
+    "Let's try to re-build this idea:\n",
+    "\n",
+    "* **WHAT** is Digital Transformation?\n",
+    "* **WHY** is it Important?\n",
+    "* **WHERE** to apply it?\n",
+    "* **HOW** to do it?\n",
+    "* **EXAMPLES**\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
