--- a/04-digital transformation.ipynb
+++ b/04-digital transformation.ipynb
@@ -226,24 +226,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quem pede?\n",
-    "\n",
-    "customer interactions\n",
-    "customer needs\n",
-    "customer interfaces\n",
-    "customer data "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='wheredigitaltransformation'></a>\n",
     "## Where to apply Digital Transformation?\n",
     "\n",
     "\n",
     "<!-- <img align=right src=\"img/digitaltra.jpg\" width=400/> -->\n",
     "\n",
+    "who asks for it?\n",
     "> product | process | operation | customer experience\n",
     "\n",
     "<br>\n",
@@ -260,8 +249,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SP500 average age of a company joining 1957-75, 2003-25, 2013-10\n",
-    "\n"
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**S&P 500 average age of a company and the disruptive force of technology**\n",
+    "\n",
+    "\n",
+    "The average has fallen from almost 60 years old in the 1950s to less than 20 years today\n",
+    "\n",
+    "<br>\n",
+    "<img  align=left src=\"img/averageSP500.png\" width=500/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " <br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "`POWERFUL` digital platforms: \n",
+    "\n",
+    "- scale<br>\n",
+    "- scope <br>\n",
+    "- speed<br>\n",
+    "\n",
+    "to expand into new growth markets and geographies\n",
+    "\n",
+    "<img align=left src=\"img/top12.png\" width=500/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "###### source: https://www.innosight.com/insight/creative-destruction/"
    ]
   },
   {
@@ -273,7 +297,8 @@
     "\n",
     "**Some positive examples**\n",
     "\n",
-    "<img align=left src=\"img/inobest.png\" width=400/>\n"
+    "<img align=left src=\"img/inobest.png\" width=400/>\n",
+    "\n"
    ]
   },
   {
@@ -320,42 +345,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ver cases por area\n",
-    "\n",
-    "\n",
-    "Pensar em colocar alguns exemplos somente pra contextualizar... e cravar q isso muda tbem a nossa vida como individuo\n",
-    "ex: jornal news update, cell phone, photo ---- think about the commercial part not only in tech, spotify (cd - napster - spotfy)\n",
-    "\n",
-    "\n",
-    "casos de sucesso\n",
-    "\n",
-    "- DBS Bank, LEGO, Philips, Schneider Electric, and USAA.\n",
-    "- amazon\n",
-    "apple\n",
-    "...\n",
-    "- self driven, amazon, m26 bank in german 100/ online..., apple pay\n",
-    "(exemplos na apresentacao Vinicius)\n",
-    "\n",
-    "Casos de disrupcao\n",
-    "Accord Hotel vs Booking\n",
-    "Taxi vs Uber\n",
-    "jornal\n",
-    "\n",
-    "Li & Fung sought to reduce production lead times, increase speed-to-market, and improve the use of data in its global supply chain. After concrete goals were established, the company decided on which digital tools it would adopt. Just to take speed-to-market as an example, Li & Fung has embraced virtual design technology and it has helped them to reduce time from design to sample by 50%. Li & Fung also helped suppliers to install real-time data tracking management systems to increase production efficiency and built Total Sourcing, a digital platform that integrates information from customers and vendors. The finance department took a similar approach and ultimately reduced month-end closing time by more than 30% and increased working capital efficiency by $200 million.\n",
-    "\n",
-    "For instance, according to Echo Nest, a music intelligence startup, your music-based Code Halo\n",
-    "can convey much more about you than just what kind of music you like to listen to.2\n",
-    " It can also\n",
-    "reveal your tastes in food, movies and literature, as well as your product preferences, political\n",
-    "learnings and even measures of intelligence. Justin Timberlake fans, for example, are more likely\n",
-    "to enjoy Pixar films; people who listen to jazz music tend to care less about sports; and people\n",
-    "who listen to Madonna are more likely to vote Democrat in U.S. elections."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='howdigitaltransformation'></a>\n",
     "## How to do it (DTX)?\n",
     "\n",
@@ -364,6 +353,12 @@
     "\n",
     "> how to make this work again?\n",
     "\n",
+    "<br>\n",
+    "\n",
+    "Take a **holistic** view of digital `change efforts` and `integration` into all aspects of the business:\n",
+    "\n",
+    "product | process | operation | customer experience\n",
+    "\n",
     "    "
    ]
   },
@@ -371,78 +366,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> not only tech, but digital continuation\n",
+    "<br>\n",
+    "<br>\n",
+    "<img align=right src=\"img/oz.jpg\" width=250/>\n",
     "\n",
     "\n",
-    "Tech is a enabler (not driver) ... enable pra cultura, time e inovacao\n",
-    "NAO eh colocar a empresa no face, twiiter, youtube ou na web... mmais q isso\n",
-    "digitizing existing services + add techs\n",
-    "An important element of digital transformation is, of course, technology. But often, it's more about shedding outdated processes and legacy technology than it is about adopting new tech.\n",
+    "**CHOOSE the way... the journey's pace**\n",
     "\n",
-    "Instead of trying to be Amazon, your organization should be figuring out how to continue to do what it does well and add digital products that enhance its products and services****\n",
+    "<br>\n",
     "\n",
-    "shedding outdated processes and legacy technology than it is about adopting new tech. to rethink old operating models, to experiment more, to become more agile in your ability to respond to customers and rivals \n",
-    "chasing digital products and offerings that don’t add business value at the end of the day"
+    "> 1. **fix and incremental changes**\n",
+    "<br>*continue to do what it does well and `add` digital products that enhance business*\n",
+    "\n",
+    "<!--Instead of trying to be Amazon, your organization should be figuring out -->\n",
+    "> 2. **disruptive changes (innovation, creative destruction...)**\n",
+    "<br>*rethink old operating models*\n",
+    "\n",
+    "> 3. **hybrid**\n",
+    "\n",
+    "\n",
+    "<!-- must look at how the organization operates and find ways to inject speed into processes-->\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> how\n",
-    "\n",
-    "digital transformation leaders must take a holistic view of digital change efforts.\n",
-    "\n",
-    "focus on integrating digital into all aspects of the business, from channels and processes and data to the operating model, incentives, and culture. \n",
-    "\n",
-    "must look at how the organization operates and find ways to inject speed into processes.\n",
-    "\n",
-    "1. areas\n",
-    "2. Modo\n",
-    "3. ferramental\n",
-    "4. plano\n",
-    "5. Campanha\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Company Areas\n",
-    "\n",
-    "Some CDOs realize too late that functions such as compliance, finance, human resources, legal, procurement, and risk also need to change to support a more digitally focused company. At one company, for example, an effort to accelerate time to market is in full swing, but procurement still insists it requires six months to approve a vendor. Changing such supporting processes isn’t easy—functions often have good reasons for why processes are undertaken as they are. But brokering compromises and testing new ways of operating that are necessary to make progress will be virtually impossible if a CDO doesn’t build internal networks early and engage with leaders across the business.\n",
-    "\n",
-    "three key areas of their enterprises: customer experience, operational processes and business models.\n",
-    "\n",
-    "(ver pic cognizant)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Modo \n",
-    "\n",
-    "In some cases, it could be as straightforward as working with IT to automate existing development processes. But in others, it will require radically changing how the company works, such as setting extremely aggressive goals—as few as six weeks—for getting a product to market\n",
     "\n",
     "\n",
-    "disruptive\n",
-    "existe um modo mais extremo:\n",
-    "1st thing is fundamentally changing the way you think about your business today\n",
-    "organizational disruption \n",
-    "investing in new... innovative models ---- CLICHE demais\n",
-    "redefine your business\n",
+    "**CHOOSE the battle...**\n",
     "\n",
-    "gradativo\n",
-    "Mas como: digital transformation will look different for every company\n",
-    "eu fico com o mais comum, mais provável, mior chance de acerto e um primeiro passo plausível:\n",
-    "parceiro estrategico --- escuto isso ha anos... sonho de ti\n",
+    "<br>\n",
     "\n",
+    "> 1. **straightforward**\n",
+    "<br>*working with IT to automate existing development processes*\n",
     "\n",
+    "<!--Instead of trying to be Amazon, your organization should be figuring out -->\n",
+    "> 2. **radical changes**\n",
+    "<br>*rethink old operating models*\n",
     "\n",
-    "**That’s the conventional wisdom: improve one part at a time, then move to the next part, methodically and consistently. This traditional view sounds sensible but appears to be wrong. Research by our colleagues shows that the most successful performance-transformation efforts cut across business units and functions, target both the top and bottom lines, and engage a substantial share of the workforce. Those findings are consistent with our experience, which is that cross-functional operations transformations—emphasizing the interactions between product development, procurement, manufacturing, supply chains, capital expenditures, and services (exhibit)—typically outperform their single-function counterparts by between 30 and 40 percent. (picture CROSS)\n",
+    "> 3. **hybrid**\n",
     "\n",
-    "**posso separa em bloco | cross | hibrido\n",
     "\n"
    ]
   },
@@ -450,19 +414,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ferramental \n",
     "\n",
-    "plat. digital: a data-driven world rather than a process-driven world. --- mais ou menos hein .. isso soa estranho.\n",
-    "operating model: gain better efficiency, reduce cost, and/or increase repeatability,\n",
+    "<img align=right src=\"img/cross.png\" width=400/>\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
-    "Operational backbone – technology that handles core operations\n",
-    "Digital platform – so you can recreate an idea for the next customer\n",
+    "**CHOOSE the engagement...**\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "> 1. **block**\n",
+    "<br>*isolated areas*\n",
+    "\n",
+    "> 2. **cross-functional**\n",
+    "<br>*across business units and functions*\n",
+    "<br>*both the top and bottom lines*\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "option `#2`: brings more engagement of the workforce, cultural change\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "###### image: McKinsey & Company\n",
+    "\n",
+    "\n",
+    "<!-- That’s the conventional wisdom: improve one part at a time, then move to the next part, methodically and consistently. This traditional view sounds sensible but appears to be wrong. Research by our colleagues shows that the most successful performance-transformation efforts cut across business units and functions, target both the top and bottom lines, and engage a substantial share of the workforce. Those findings are consistent with our experience, which is that cross-functional operations transformations—emphasizing the interactions between product development, procurement, manufacturing, supply chains, capital expenditures, and services (exhibit)—typically outperform their single-function counterparts by between 30 and 40 percent. -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**REMEMBER!**\n",
+    "\n",
+    "> not only tech, but digital continuation\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Technology is a `enabler`, not driver... \n",
+    "\n",
+    "it's more about shedding outdated processes and legacy technology than new tech\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "## How to do it (DTX)?\n",
+    "\n",
+    "1. Business Areas\n",
+    "2. Pace\n",
+    "3. Tools\n",
+    "4. Plan\n",
+    "5. Campaign\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**1. Business Areas**\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "*Remember* the holistic view of digital `change efforts`:\n",
+    "\n",
+    "> product | process | operation | customer experience\n",
+    "\n",
+    "\n",
+    "Therefore, not only IT needs the transformation:\n",
+    "\n",
+    "- compliance\n",
+    "- finance \n",
+    "- human resources\n",
+    "- legal\n",
+    "- procurement\n",
+    "- risk\n",
+    "- ...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "\n",
+    "\"but **XX** still insists it requires **SIX** months to approve a **XX**\"\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Quite sure there are reason for that. No doubt.\n",
+    "\n",
+    "\n",
+    "But **if we believe we need DTX to survive**, we have to think and test new ways of operating\n",
+    "\n",
+    "\n",
+    "> lean | agile | internal networks | engagement with leaders across the business\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**2. Pace**\n",
+    "###### (as already presented)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "> 1. **fix and incremental changes**\n",
+    "<br>*continue to do what it does well and `add` digital products that enhance business*\n",
+    "<br>*gradual*\n",
+    "<br>*improve one part at a time, then move to the next part, methodically and consistently*\n",
     "\n",
     "\n",
     "\n",
-    "The first key is adopting digital tools to make information more accessible across the organization, which more than doubles the likelihood of a successful transformation. The second is implementing digital self-serve technologies for employees, business partners, or both groups to use; transformation success is twice as likely when organizations do so. A third key, focused on technology in company operations, is organizations modifying their standard operating procedures to include new technologies.\n",
     "\n",
-    "(pesquisar ferramentas e exemplos de ferramentas por area)\n"
+    "\n",
+    "\n",
+    "<!--Instead of trying to be Amazon, your organization should be figuring out -->\n",
+    "> 2. **disruptive changes (innovation, creative destruction...)**\n",
+    "<br>*rethink old operating models*\n",
+    "<br>*redefine your business*\n",
+    "\n",
+    "\n",
+    "> 3. **hybrid**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**3. Tools**\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- operational backbone: tech for core operations\n",
+    "- digital platform: a data-driven world and digital tools \n",
+    "\n"
    ]
   },
   {
